<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ModAzul"
    tools:context=".Register_Product">

    <TextView
        android:id="@+id/TxtRegisterProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtRegisterProduct"
        android:textColor="@color/gold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/EdtIdProducto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa el codigo de barras"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/EdtNombreProducto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa el nombre del producto"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/EdtDescripcionProducto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa una pequeña descripción"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/EdtStockProducto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa el stock"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/EdtPrecioProducto"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa el precio de venta"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/EdtIdProveedor"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Ingresa el numero de proveedor"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/BtnRegistrar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/gold"
        android:text="@string/BtnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <Button
        android:id="@+id/BtnScan"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/gold"
        android:text="@string/BtnScan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>